--- a/style.css
+++ b/style.css
@@ -110,6 +110,26 @@ img {
     animation-duration: .6s;
 }
 
+.flex-wrap{
+    display: flex;
+}
+
+.invert{
+    filter:invert(100%);
+}
+
+.rotate{
+    transform: rotate(180deg);
+}
+
+.animate{
+    transition: .3s;
+}
+
+.animate:hover{
+    opacity: .7;
+}
+
 .allPages {
     width: 100vw;
     height: 100vh;
@@ -215,7 +235,7 @@ input,
 textarea {
     border-radius: 5px;
     border: 1px solid transparent;
-    background-color: #fbf5ee;
+    background-color: none;
     width: 100%;
     padding: 15px;
 }
@@ -227,7 +247,7 @@ textarea {
 
 textarea:focus,
 input:focus {
-    border-color: #e2ad22;
+    border-color: none;
 }
 
 textarea::placeholder,
@@ -250,7 +270,7 @@ textarea:focus::placeholder {
 
 
 .items-section {
-    padding-top: 35px;
+    padding-top: 50px;
 }
 
 .items-section .container{
@@ -413,7 +433,7 @@ textarea:focus::placeholder {
     position: absolute;
     left: -300px;
     width: 696.77px;
-    background: url(img/check-white.svg) no-repeat center, #f78888;
+    background: url(img/my-check.svg) no-repeat center, #f78888;
     background-size: 35px 35px;
     border-radius: 8px;
     transform: translateX(-50%);
@@ -481,7 +501,7 @@ textarea:focus::placeholder {
     content: '';
     width: 35px;
     height: 35px;
-    background: url(img/check-white.svg) no-repeat center;
+    background: url(img/my-check.svg) no-repeat center;
     text-align: center;
     position: absolute;
     left: -120px;
@@ -596,7 +616,7 @@ textarea:focus::placeholder {
     bottom: 20px;
     right: 30px;
     border-radius: 50%;
-    background: url(img/arr-b-black.svg) no-repeat center #fff;
+    background: url(img/my-arr-b.svg) no-repeat center #fff;
     background-size: 15px 25px;
     transform: rotate(180deg);
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, .3);
@@ -686,10 +706,9 @@ textarea:focus::placeholder {
 
 /* Test */
 
+.page1{
+    width: 100vw;
+    height: 200vh;
+    background: #f00;
+}
 
-
-
-
-
-
-      
