--- a/style.css
+++ b/style.css
@@ -91,6 +91,18 @@ img {
     height: auto;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+
+
 
 
 
@@ -712,3 +724,151 @@ textarea:focus::placeholder {
     background: #f00;
 }
 
+
+
+.table-section {
+    background: #fff;
+    display: flex;
+    position: relative;
+}
+
+.table-section .left {
+    min-width: 120px;
+}
+
+.table-section .left .row {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.table-section .right {
+    width: calc(100% - 120px);
+}
+
+.table-section .right .row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.table-section .right .swiper-slide .row:not(:first-child) {
+    border-top: 1px solid #e8ddd0;
+    border-left: 1px solid #e8ddd0;
+}
+
+
+.table-section .left .row:not(:first-child) {
+    border-top: 1px solid #e8ddd0;
+}
+
+.table-section .next2,
+.table-section .prev2 {
+    display: none;
+    outline: none;
+}
+
+
+@media(max-width:1199px) {
+
+
+
+}
+
+@media(max-width:700px) {
+    .table-section .left {
+        min-width: 75px;
+    }
+
+    .table-section .right {
+        width: calc(100% - 75px);
+    }
+
+    .table-section .right .row {
+        font-size: 20px;
+    }
+
+    .table-section .left .row {
+        font-size: 20px;
+        padding: 15px 10px;
+    }
+}
+
+
+
+
+
+.swiper-button-prev:after,
+.swiper-button-next:after{
+    display: none;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    height: 25px;
+    width: 15px;
+}
+
+.swiper-button-next{
+    background: url(img/arr-r-b.svg) no-repeat center;
+    right:0;
+}
+
+.swiper-button-prev{
+    background: url(img/arr-l-b.svg) no-repeat center;
+    left:0;
+}
+
+
+                                
+
+
+
+
+
+
+
+
+
+
+.swiper-button-prev,
+.swiper-button-next {
+    height: 25px;
+    width: 15px;
+}
+
+.swiper-button-next{
+    background: url(img/arr-r-black.svg) no-repeat center;
+    right:0;
+}
+
+.swiper-button-prev{
+    background: url(img/arr-l-black.svg) no-repeat center;
+    left:0;
+}
+
+
+
+
+.swiper-button-prev,
+.swiper-button-next {
+    position: static;
+    height: 25px;
+    width: 15px;
+    margin-top: 0;
+    background: url(img/my-arr-l.svg) no-repeat center;
+    /* filter:invert(100%); */
+}
+
+.swiper-button-next{
+    transform: rotate(180deg);
+    right:0;
+}
+
+.swiper-button-prev{
+    left:0;
+}
