--- a/style.css
+++ b/style.css
@@ -726,7 +726,12 @@ textarea:focus::placeholder {
 }
 
 
+.map-wrapper{
+    width: 100%;
+    height: 500px;
+}
+
 #map{
-    width: 100px;
-    height: 100px;
+    height: 100%;
+    width: 100%;
 }
