--- a/style.css
+++ b/style.css
@@ -726,51 +726,20 @@ textarea:focus::placeholder {
 }
 
 
-.check-label{
-    display: flex;
-    align-items: center;
-}
-
-.check-label input{
+.file-label input{
     display: none;
 }
 
-.check-text{
-
-}
-
-.check-box{
-    width: 20px;
-    height: 20px;
-    border:2px solid #000;
+.file-btn{
+    background: #000;
+    color:#fff;
     margin-right: 15px;
-    position: relative;
     cursor: pointer;
 }
 
-/* Simple */
-.check-label input:checked ~ .check-box:before{
-    content:'';
-    background: #000;
-    width: 10px;
-    height: 10px;
-    position: absolute;
-    left:50%;
-    top:50%;
-    transform: translate(-50%,-50%);
-    opacity: 0;
-    transition: .3s;
-}
+.file-result{
 
-.check-label input:checked ~ .check-box:before{
-    opacity: 1;
 }
-
-/* Custom */
-/* .check-label input:checked ~ .check-box{
-    background: url(img/my-check.svg) no-repeat center;
-    background-size: 70%;
-} */
 
 
 
