--- a/style.css
+++ b/style.css
@@ -1208,3 +1208,198 @@ textarea:focus::placeholder {
     width: 100%;
 }
 
+
+
+.pay-section {
+    padding-top: 45px;
+    padding-bottom: 45px;
+}
+
+.pay-title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+    color: #000000;
+}
+
+.pay-subtitle {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    color: #000000;
+}
+
+.pay-top {
+    margin-bottom: 35px;
+}
+
+.card-items {
+    width: 480px;
+}
+
+.card-item {
+    padding: 8px 35px;
+    display: flex;
+    border: 1px solid #DBA942;
+    border-radius: 15px;
+    position: relative;
+}
+
+.card-item+.card-item {
+    margin-top: 23px;
+}
+
+.card-img {
+    margin-right: 35px;
+    width: 70px;
+}
+
+.card-num {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    color: #000000;
+    margin-bottom: 4px;
+}
+
+.card-period {
+    display: flex;
+}
+
+.card-def {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #DBA942;
+    margin-left: 8px;
+}
+
+.card-period-val {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    color: #000000;
+}
+
+.pay-right {
+    flex: 1;
+    padding-left: 70px;
+}
+
+.extra-btn {
+    position: absolute;
+    right: -10px;
+    top: -12px;
+    width: 65px;
+    height: 30px;
+    background: url(img/extr.png) no-repeat center;
+    background-size: contain;
+    display: block;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.extra-btn:hover .inner-btn {
+    opacity: .7;
+}
+
+.extra-btn .inner-btn {
+    width: 100%;
+    height: 100%;
+    opacity: .7;
+}
+
+.card-settings {
+    position: absolute;
+    right: 5px;
+    top: 102%;
+    padding: 7px;
+    border-radius: 15px;
+    background: #fff;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    border: 1px solid #ccc;
+    z-index: 3;
+    display: none;
+}
+
+.card-settings a {
+    width: 100px !important;
+}
+
+.card-settings li+li {
+    margin-top: 5px;
+}
+
+.pay-btn {
+    text-decoration: none;
+    text-transform: none;
+    font-weight: normal;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-top: 12px;
+}
+
+
+
+
+
+.transform-table {
+    border-collapse: collapse;
+    width: 100%;
+    position: relative;
+}
+
+.transform-table tr {
+    position: relative;
+}
+
+.transform-table th,
+.transform-table td {
+    text-align: left;
+    padding: 15px 30px;
+    padding-left: 0;
+}
+
+.transform-table td {
+
+}
+
+.transform-table th {
+
+}
+
+@media (max-width:1199px) {
+
+}
+
+@media (max-width:992px) {
+
+}
+
+@media (max-width: 768px) {
+    .transform-table tr {
+        display: block;
+        margin-bottom: 25px;
+    }
+
+    .transform-table td {
+        display: block;
+        padding: 5px 0;
+    }
+
+    .transform-table th {
+        display: none;
+    }
+
+    .transform-table td::before {
+        content: attr(data-label);
+        display: inline-block;
+        max-width: 100px;
+        width: 100%;
+        font-weight: 700;
+    }
+}
